deploy/bgc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgc-api
  namespace: data
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: api.bgc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bgc-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bgc-web
  namespace: data
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  rules:
    - host: web.bgc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bgc-web
                port:
                  number: 80
